Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-61492

qrandom.cpp: undefined reference to `QDeadlineTimer::current(Qt::TimerType)' and `QDeadlineTimer::deadline() const'

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P0: Blocker
    • 5.10.0 Alpha
    • 5.10.0 Alpha
    • None
    • af7267209cae39c35f12fb7411bac710af40d602

    Description

      https://codereview.qt-project.org/#/c/197059/
      https://testresults.qt.io/coin/integration/qt/qt5/tasks/1497729879
      https://testresults.qt.io/coin/api/results/qt/qtdeclarative/97948f1821bef7f802400f8e38583a262f50ab07/LinuxRHEL_7_2x86_64AndroidAndroid_ANYarmv7GCCqtci-linux-RHEL-7.2-x86_64-c962bfRelease_DisableTests_OpenGLES2_NoUseGoldLinker/02fa4ca706f97dfd49dce19a2a4e9dd926a24a92/build_1497730132/buildlog.txt.gz
      https://testresults.qt.io/coin/api/results/qt/qtdeclarative/97948f1821bef7f802400f8e38583a262f50ab07/LinuxRHEL_7_2x86_64AndroidAndroid_ANYx86GCCqtci-linux-RHEL-7.2-x86_64-c962bfRelease_DisableTests_OpenGLES2_NoUseGoldLinker/02fa4ca706f97dfd49dce19a2a4e9dd926a24a92/build_1497731130/buildlog.txt.gz
      https://testresults.qt.io/coin/api/results/qt/qtdeclarative/97948f1821bef7f802400f8e38583a262f50ab07/LinuxUbuntu_16_04x86_64LinuxBoot2Qt_Jethrox86_64GCCqtci-linux-Ubuntu-16.04-x86_64-844791DisableTests/02fa4ca706f97dfd49dce19a2a4e9dd926a24a92/build_1497730134/buildlog.txt.gz

      ...
      /home/qt/work/b2qt/toolchain/sysroots/x86_64-pokysdk-linux/usr/bin/arm-poky-linux-gnueabi/arm-poky-linux-gnueabi-g++ -c -pipe -march=armv7-a -mfpu=neon -DLINUX=1 -DEGL_API_FB=1 -mfloat-abi=hard --sysroot=/home/qt/work/b2qt/toolchain/sysroots/cortexa9hf-vfp-neon-poky-linux-gnueabi -O2 -std=c++1z -fno-exceptions -Wall -W -Wvla -Wdate-time -D_REENTRANT -fPIC -DQML_RUNTIME_TESTING -DQT_QML_DEBUG_NO_WARNING -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_USE_QSTRINGBUILDER -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_QUICK_LIB -DQT_QML_LIB -DQT_WIDGETS_LIB -DQT_GUI_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -I. -I../../include/QtQuick/5.10.0 -I../../include/QtQuick/5.10.0/QtQuick -I../../include -I../../include/QtQuick -I../../include/QtQml/5.10.0 -I../../include/QtQml/5.10.0/QtQml -I../../include/QtQml -I/home/qt/work/install/include/QtGui/5.10.0 -I/home/qt/work/install/include/QtGui/5.10.0/QtGui -I/home/qt/work/install/include -I/home/qt/work/install/include/QtWidgets -I/home/qt/work/install/include/QtGui -I/home/qt/work/install/include/QtNetwork -I/home/qt/work/install/include/QtCore/5.10.0 -I/home/qt/work/install/include/QtCore/5.10.0/QtCore -I/home/qt/work/install/include/QtCore -I.moc -I/home/qt/work/install/mkspecs/devices/linux-imx6-g++ -o .obj/main.o main.cpp
      /home/qt/work/install/lib/libQt5Bootstrap.a(qrandom.o): In function `fallback_fill(unsigned int*, long long)':
      qrandom.cpp:(.text.unlikely._ZL13fallback_fillPjx+0x9b): undefined reference to `QDeadlineTimer::current(Qt::TimerType)'
      qrandom.cpp:(.text.unlikely._ZL13fallback_fillPjx+0xb3): undefined reference to `QDeadlineTimer::deadline() const'
      collect2: error: ld returned 1 exit status
      Makefile:108: recipe for target '../../bin/qmlcachegen' failed
      make[2]: *** [../../bin/qmlcachegen] Error 1
      make[2]: Leaving directory '/home/qt/work/qt/qtdeclarative/tools/qmlcachegen'
      Makefile:104: recipe for target 'sub-qmlcachegen-make_first' failed
      make[1]: *** [sub-qmlcachegen-make_first] Error 2
      make[1]: *** Waiting for unfinished jobs....
      ...
      

      Attachments

        For Gerrit Dashboard: QTBUG-61492
        # Subject Branch Project Status CR V

        Activity

          People

            thiago Thiago Macieira
            liaqi Liang Qi
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes